objects/objectproject__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Uk</fullName>
                </value>
                <value>
                    <fullName>Us</fullName>
                </value>
                <value>
                    <fullName>Em</fullName>
                </value>
                <value>
                    <fullName>Ko</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_name__c</fullName>
        <label>Project name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mh</fullName>
                </value>
                <value>
                    <fullName>Tn</fullName>
                </value>
                <value>
                    <fullName>An</fullName>
                </value>
                <value>
                    <fullName>Ke</fullName>
                </value>
                <value>
                    <fullName>Gj</fullName>
                </value>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Mp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_code__c</fullName>
        <label>Zip code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>objectproject</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>objectproject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>objectprojects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>